move vpaid template from directive into service

--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,8 @@
             <img alt="vimeo thumb" ng-src="{{AppCtrl.vimeo.thumbnail_small}}">
         </div>
         <!--<youtube-player videoid="dqoPXC60l_s"  style="height: 500px; display: block;" start="15" end="25"></youtube-player>-->
-        <rumble-player id="rumble" videoid="8.2zf97" autoplay start="15" end="25"></rumble-player>
-        <vimeo-player videoid="108018156" autoplay style="height: 500px; display: block;" start="15" end="25"></vimeo-player>
+        <!-- <rumble-player id="rumble" videoid="8.2zf97" autoplay start="15" end="25"></rumble-player> -->
+        <!-- <vimeo-player videoid="108018156" autoplay style="height: 500px; display: block;" start="15" end="25"></vimeo-player> -->
         <!--<dailymotion-player videoid="x279hwy" style="height: 500px; display: block;"></dailymotion-player>-->
 
         <!--<vast-player videoid="1234" ad-tag="{{AppCtrl.vastTag}}" controls></vast-player>
@@ -23,13 +23,13 @@
             <button ng-click="AppCtrl.changeVastAdTag()">Change Ad Tag</button>
         </div>-->
 
-        <!-- <vpaid-player videoid="12345" ad-tag="{{AppCtrl.vpaidTag}}" style="height:500px; width:700px; display:block; position:relative;"></vpaid-player>
+        <vpaid-player videoid="12345" ad-tag="{{AppCtrl.vpaidTag}}" style="height:500px; width:700px; display:block; position:relative;"></vpaid-player>
         <div ng-show="adReady">
             <button ng-click="AppCtrl.playVpaidAd()">Play Ad</button>
             <button ng-click="AppCtrl.pauseVpaidAd()">Pause Ad</button>
             <button ng-click="AppCtrl.reloadVpaidAd()">Reload Ad</button>
             <button ng-click="AppCtrl.changeVpaidAdTag()">Change Ad Tag</button>
-        </div> -->
+        </div>
 
         <!-- <embedded-player code="{{AppCtrl.yahooCode}}"></embedded-player> -->
 
